Ajout de Tests et Corrections Condottiere #21